# airq-exporter

./: .clangd  README.md  flake.nix  run.sh
.zed/: settings.json
app/: exporter_app.cpp  exporter_app.hpp
components/exporter/: prometheus_exporter.cpp  prometheus_exporter.hpp
components/lvgl++/: lvgl.cpp  lvgl.hpp
esp32s3/: CMakeLists.txt  sdkconfig.defaults
idf-components/httpd/: CMakeLists.txt  httpd.cpp  httpd.hpp
idf-components/m5airq-bsp/: CMakeLists.txt  bsp_airq.c  bsp_airq.h
idf-components/m5airq-bsp/devices/: scd4x.c  scd4x.h  sen5x.c  sen5x.h  sensirion_i2c.c  sensirion_i2c.h
idf-components/main/: CMakeLists.txt  config.hpp  idf_component.yml  main.cpp  platform_port.hpp
simulator/: CMakeLists.txt  lv_conf.h
simulator/src/: httpd.hpp  main.cpp  platform_port.hpp
simulator/src/bsp_mock/: bsp_mock.hpp  sensor_mock.cpp
